--- a/Views/Cafe/List.cshtml
+++ b/Views/Cafe/List.cshtml
@@ -18,6 +18,6 @@
 
 @foreach (var Cafe in Model)
 {
-    <h4><a href="/Cafe/Details/@Cafe.CafeId">@Cafe.CafeName</a></h4>
+    <h4><a href="/Cafe/Details/@Cafe.CafeId">@Cafe.Name</a></h4>
    
 }
