--- a/Views/Order/List.cshtml
+++ b/Views/Order/List.cshtml
@@ -18,7 +18,7 @@
 {
     <div>
         <h2>
-            <a href="/Order/Details/@Order.OrderId">@Order.OrderName</a>
+            <a href="/Order/Details/@Order.OrderId">@Order.CreatedAt</a>
         </h2>
     </div>
 }
