--- a/Views/Item/List.cshtml
+++ b/Views/Item/List.cshtml
@@ -5,12 +5,12 @@
 }
 
 <h2>Browse Items</h2>
-<a href="/Item/New" class="new-item-link">New Item</a>
+<a href="/Item/New">New Item</a>
 
 @foreach (var item in Model)
 {
     <div class="item-item">
-        <h2 class="item-name"><a href="/Item/Details/@item.ItemId">@item.ItemName</a></h2>
+        <h2 class="item-name"><a href="/Item/Details/@item.ItemId">@item.Name</a></h2>
     </div>
 }
 
