--- a/Views/Cafe/DeleteConfirm.cshtml
+++ b/Views/Cafe/DeleteConfirm.cshtml
@@ -7,11 +7,16 @@
 <h2>DeleteConfirm</h2>
 
 <h2>Are you sure you want to delete this cafe?</h2>
-<a href="/Cafe/List">Cancel</a>
-<h2>@Model.CafeName</h2>
-<div>District: @Model.DistrictName</div>
-<div>Address: @Model.CafeAddress</div>
+
+<!--Cafe information-->
+<h2>@Model.Name</h2>
+<div>Address: @Model.Address</div>
+
+<!--Button to delete cafe-->
 <form action="/Cafe/Delete/@Model.CafeId" method="POST">
     <input type="submit" value="Confirm Delete" />
 </form>
+
+<!--Return back to list of cafes-->
+<a href="/Cafe/List">Cancel</a>
 
