--- a/Views/Cafe/New.cshtml
+++ b/Views/Cafe/New.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<humber_http_5226_collaborative_project.Models.OrderDto> //fix this (remove completely??)
+﻿@model IEnumerable<humber_http_5226_collaborative_project.Models.CafeDto>
 
 @{
     ViewBag.Title = "Create";
