--- a/Views/Item/DeleteConfirm.cshtml
+++ b/Views/Item/DeleteConfirm.cshtml
@@ -5,9 +5,15 @@
 }
 
 <h2>Are you sure you want to delete this Item?</h2>
-<a href="/Item/List">Cancel</a>
-<h3>Name: @Model.ItemName</h3>
+
+<h3>Name: @Model.Name</h3>
+
 <form action="/Item/Delete/@Model.ItemId" method="POST">
+
     <input type="submit" value="Confirm Delete" />
+
 </form>
+
+<a href="/Item/List">Cancel</a>
+
 
