--- a/Views/Order/DeleteConfirm.cshtml
+++ b/Views/Order/DeleteConfirm.cshtml
@@ -5,9 +5,15 @@
 }
 
 <h2>Are you sure you want to delete this order?</h2>
-<h3>Name: @Model.OrderName</h3>
+
+<h3>Name: @Model.OrderId</h3>
+
 <form action="/Order/Delete/@Model.OrderId" method="POST">
+
     <input type="submit" value="Confirm Delete" />
-    <a href="/Order/List">Cancel</a>
+
 </form>
+
+<a href="/Order/List">Cancel</a>
+
 
