--- a/Views/Order/Details.cshtml
+++ b/Views/Order/Details.cshtml
@@ -1,21 +1,53 @@
-﻿@model humber_http_5226_collaborative_project.Models.ViewModels.DetailsOrder
+﻿@model humber_http_5226_collaborative_project.Models.OrderDto
 
 @{
     ViewBag.Title = "Details";
 }
 
-<a href="/Order/List">Go back to list</a>
-<a href="/Order/Edit/@Model.SelectedOrder.OrderId" </a>
-<a href="/Order/DeleteConfirm/@Model.SelectedOrder.OrderId">Delete</a>
-<h2>@Model.SelectedOrder.OrderName</h2>
+
+
+<h2>Order Details</h2>
+
+<!--Back to list button-->
+<a href="/Order/List">Back to List</a>
+
 
 <div>
-    <h3>Cafes in this Order</h3>
-    <ul>
-        @foreach (var cafe in Model.RelatedCafes)
-        {
-            <li><a href="/Cafe/Details/@cafe.CafeId">@cafe.CafeName</a></li>
-        }
-    </ul>
+    <h3>Order ID: @Model.OrderId</h3>
+    <p>Date Created: @Model.CreatedAt.ToString("g")</p>
+    <p>Status: @Model.Status</p>
+    <p>Cafe: @Model.Cafe.Name</p>
+    <p>Courier License ID: @(Model.CourierLicenseId.HasValue ? Model.CourierLicenseId.ToString() : "Not Assigned")</p>
+
+    <h4>Order Items</h4>
+    @if (Model.OrderItems != null && Model.OrderItems.Any())
+    {
+        <table>
+            <thead>
+                <tr>
+                    <th>Item Name</th>
+                    <th>Quantity</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.OrderItems)
+                {
+                    <tr>
+                        <td>@item.Item.Name</td>
+                        <td>@item.Quantity</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p>No items found for this order.</p>
+    }
+</div>
+
+<div>
+    <a href="/Order/Edit/@Model.OrderId">Edit Order</a> |
+    <a href="/Order/DeleteConfirm/@Model.OrderId">Delete Order</a>
 </div>
 
