--- a/Views/Cafe/List.cshtml
+++ b/Views/Cafe/List.cshtml
@@ -9,12 +9,12 @@
 <a href="/Cafe/New">New Cafe</a>
 
 <!--Cafe search field-->
-<form action="/Cafe/List" method="GET">
+<!--<form action="/Cafe/List" method="GET">
     <div>
         <input type="text" name="SearchKey" />
         <input type="submit" value="Search" />
     </div>
-</form>
+</!--form>-->
 
 <!-- Loop displaying list of cafes-->
 @foreach (var Cafe in Model)
