--- a/Views/Cafe/Edit.cshtml
+++ b/Views/Cafe/Edit.cshtml
@@ -10,28 +10,36 @@
         <input type="text" name="CafeId" value="@Model.CafeId" />
     </div>
     <div>
-        <label>Name:</label> <input type="text" name="Name" value="@Model.Name" />
+        <label>Name:</label> 
+        <input type="text" id="Name" name="Name" value="@Model.Name" />
     </div>
     <div>
-        <label>Address:</label> <input type="text" name="Address" value="@Model.Address" />
+        <label>Address:</label> 
+        <input type="text" id="Address" name="Address" value="@Model.Address" required/>
     </div>
     <div>
-        <label>OverpassId:</label> <input type="text" name="OverpassId" value="@Model.OverpassId" />
+        <label>OverpassId:</label> 
+        <input type="text" id="OverpassId" name="OverpassId" value="@Model.OverpassId" required/>
     </div>
     <div>
-        <label>Latitude:</label> <input type="text" name="Latitude" value="@Model.Latitude" />
+        <label>Latitude:</label> 
+        <input type="text" id="Latitude" name="Latitude" value="@Model.Latitude" required/>
     </div>
     <div>
-        <label>Longitude:</label> <input type="text" name="Longitude" value="@Model.Longitude" />
+        <label>Longitude:</label> 
+        <input type="text" id="Longitude" name="Longitude" value="@Model.Longitude" required/>
     </div>
     <div>
-        <label>Phone:</label> <input type="text" name="Phone" value="@Model.Phone" />
+        <label>Phone:</label> 
+        <input type="text" id="Phone" name="Phone" value="@Model.Phone" />
     </div>
     <div>
-        <label>Description:</label> <input type="text" name="Description" value="@Model.Description" />
+        <label>Description:</label> 
+        <input type="text" id="Description" name="Description" value="@Model.Description" />
     </div>
     <div>
-        <label>Website:</label> <input type="text" name="Website" value="@Model.Website" />
+        <label>Website:</label> 
+        <input type="text" id="Website" name="Website" value="@Model.Website" />
     </div>
     <div>
         <input type="submit" value="Update Cafe" />
