--- a/Views/Item/Edit.cshtml
+++ b/Views/Item/Edit.cshtml
@@ -11,13 +11,16 @@
         <input type="text" name="ItemId" value="@Model.ItemId" />
     </div>
     <div>
-        <label>Name:</label> <input type="text" name="ItemName" value="@Model.Name" />
+        <label>Name:</label> 
+        <input type="text" id="ItemName" name="ItemName" value="@Model.Name" />
     </div>
     <div>
-        <label>Description:</label> <input type="text" name="ItemDescription" value="@Model.Description" />
+        <label>Description:</label> 
+        <input type="text" id="ItemDescription" name="ItemDescription" value="@Model.Description" />
     </div>
     <div>
-        <label>Price:</label> <input type="text" name="ItemPrice" value="@Model.Price" />
+        <label>Price:</label> 
+        <input type="text" id="ItemPrice" name="ItemPrice" value="@Model.Price" />
     </div>
     <div>
         <input type="submit" value="Update Item" />
