--- a/Views/Item/New.cshtml
+++ b/Views/Item/New.cshtml
@@ -8,13 +8,16 @@
 
 <form action="/Item/Create" method="POST">
     <div>
-        <label>Name:</label> <input type="text" name="ItemName" />
+        <label>Name:</label> 
+        <input type="text" id="ItemName" name="ItemName" />
     </div>
     <div>
-        <label>Description:</label> <input type="text" name="ItemDescription" />
+        <label>Description:</label> 
+        <input type="text" id="ItemDescription" name="ItemDescription" />
     </div>
     <div>
-        <label>Price:</label> <input type="text" name="ItemPrice" />
+        <label>Price:</label> 
+        <input type="text" id="ItemPrice" name="ItemPrice" />
     </div>
     <div>
         <input type="submit" value="Create Item" />
